add: string resource created_by_team

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HyPonics</string>
+    <string name="created_by_team">Created By C22 HY04</string>
 </resources>
