Revisi Detail Profile (2)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="address">Address</string>
     <string name="address_example">Jl nin aja dulu</string>
     <string name="saveChange">save</string>
+    <string name="btnChangeProfile">Button Change Profile</string>
 </resources>
