--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,8 @@
     <string name="hint_search">Search article</string>
     <string name="popular_article">Popular Article</string>
     <string name="other_article">Other Article</string>
+    <string name="home">Home</string>
+    <string name="identification">Identification</string>
+    <string name="market_place">Market Place</string>
+    <string name="profile">Profile</string>
 </resources>
