--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,6 @@ detect plant diseases, forecast the weather, and predict the sunspot.</string>
     <string name="moreToComeFeatures">- More to Come!</string>
     <string name="needHelp">NEED HELP?</string>
     <string name="detailNeedHelp">You\'ve got questions, we\'ve got answer! Hit us up here :  m2006f0556@bangkit.academy</string>
+    <string name="notification">Notification</string>
+    <string name="itemsetting">Setting</string>
 </resources>
