refactor: change hard coded string to variable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@ detect plant diseases, forecast the weather, and predict the sunspot.</string>
     <string name="itemsetting">Setting</string>
     <string name="content_description_gallery">Take Image From Gallery</string>
     <string name="content_description_camera">Take Image From Camera</string>
+    <string name="image_saved">Image Saved</string>
 </resources>
