Integreasi Artikel di Home Fragment dari Firestore (1)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@ detect plant diseases, forecast the weather, and predict the sunspot.</string>
     <string name="content_description_camera">Take Image From Camera</string>
     <string name="image_saved">Image Saved</string>
     <string name="hello_indosat">Hello, Indosat</string>
+    <string name="backbutton">backButton</string>
 </resources>
