--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,11 @@ detect plant diseases, forecast the weather, and predict the sunspot.</string>
     <string name="detailNeedHelp">You\'ve got questions, we\'ve got answer! Hit us up here :  m2006f0556@bangkit.academy</string>
     <string name="notification">Notification</string>
     <string name="itemsetting">Setting</string>
+    <string name="content_description_gallery">Take Image From Gallery</string>
+    <string name="content_description_camera">Take Image From Camera</string>
+    <string name="image_saved">Image Saved</string>
+    <string name="hello_indosat">Hello, Indosat</string>
+    <string name="backbutton">backButton</string>
     <string name="wait">Please Wait...</string>
     <string name="logging">Logging In....</string>
     <string name="invalidEmail">Invalid Email Format</string>
